syntax = "proto3";

import "common.proto";

option java_package = "com.alibaba.maxgraph.proto.v2";
option java_multiple_files = true;

service ClientDdl {
  rpc submitDdl(SubmitDdlRequest) returns(SubmitDdlResponse);
}

message SubmitDdlRequest {
  repeated DdlRequestPb ddlRequests = 1;
}

message SubmitDdlResponse {
  GraphDefPb graphDef = 1;
}
